--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </pre>
 
     <!-- about me-->
-    <h1>Andrew</h1>  
-    <p class="desc">about Andrew Roque</p>
+    <h1>Andrew Roque</h1>  
+    <p class="desc">Hi! I'm a Year 0 GD student.</p>
     
     <!-- my work -->
     <div id="exercises">
