--- a/garden.html
+++ b/garden.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Andrew's ASCII Garen</title>
+		<title>Andrew's ASCII Garden</title>
 		<meta charset="utf-8" />
 	<head>
 
