--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <title>[Andrew's Interative] Interactive Site</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 
 <body>
