--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     
     <!-- my work -->
     <div id="exercises">
+      <h3>Exercises</h3>
       <ul>
-        <li><a href="garden">My garden</a></li>
+        <li><a href="garden.html">My garden</a></li>
+        <li><a href="file:///Users/andrewroque/Documents/GitHub/interactive-foundations/digital-bits/digital-bits.html">Digital Bit</a></li>
       </ul>
     
     </div>
