Added Hovering Type Exercise

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <ul>
         <li><a href="garden.html">My garden</a></li>
         <li><a href="digital-bits/digital-bits.html">Digital Bit</a></li>
+        <li><a href="hovering-type/hovering-type.html">Hovering Type</a></li>
       </ul>
     
     </div>
