--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div id="exercises">
       <h3>Exercises</h3>
       <ul>
-        <li><a href="garden.html">My garden</a></li>
+        <li><a href="garden.html">My Garden</a></li>
         <li><a href="digital-bits/digital-bits.html">Digital Bit</a></li>
-        <li><a href="hovering-type/hovering-type.html">Hovering Type</a></li>
+        <li><a href="typeface-test/hovering-type.html">Hovering Type</a></li>
       </ul>
     
     </div>
