--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3>Projects</h3>
     
       <ul>
-        <li><a href="typeface/Bleeding-Bits_pg01">CSS TYPEFACE</a></li>
+        <li><a href="typeface/Bleeding-Bits_pg01.html">CSS TYPEFACE</a></li>
       </ul>
 
     </div>
