--- a/typeface/Bleeding-Bits_pg01.html
+++ b/typeface/Bleeding-Bits_pg01.html
@@ -84,9 +84,11 @@
 			<source src="audio/Grizzlybear.mp3" type="audio/mp3">
 		</audio>
 
-
 	</div>
 
+
+	<div class="container">
+		
 	<div class="one-four-three centered sticky">
 		<div class="bounding-box" id="one">
 			<div class="stroke" id="one-one"></div>
@@ -128,6 +130,7 @@
       		<div class="stroke red" id="three-thirteen"></div>
       		<div class="stroke red" id="three-fourteen"></div>
 		</div>
+	</div>
 	</div>
 	
 
