--- a/typeface/Bleeding-Bits_pg01.html
+++ b/typeface/Bleeding-Bits_pg01.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+	<div class="options">
+			<a href="Bleeding-Bits_about.html">Bleeding Bits</a>
+	</div>
+		
 
 	<div class=video-wall>
 
@@ -76,19 +80,19 @@
  			<source src="video/lalaland.mp4">
 		</video>
 
-		<iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none">
+<!-- 		<iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none">
 			
 		</iframe>
 
 		<audio controls="false" loop autoplay preload="" class="movie audio">
 			<source src="audio/Grizzlybear.mp3" type="audio/mp3">
-		</audio>
+		</audio> -->
 
 	</div>
 
 
 	<div class="container">
-		
+
 	<div class="one-four-three centered sticky">
 		<div class="bounding-box" id="one">
 			<div class="stroke" id="one-one"></div>
