--- a/Missed-Connections/missed-connections.html
+++ b/Missed-Connections/missed-connections.html
@@ -14,12 +14,12 @@
 
 	<!-- <h1>Missed Conne---ons</h1> -->
 
-	<a class="randomX1 test" href="http://google.com" target="_blank">
+<!-- 	<a class="randomX1 test" href="http://google.com" target="_blank">
 		<img class="randomY1" src="images/ball.gif" alt="ball" />
-	</a>
+	</a> -->
 
 
-	<a class="randomX2" href="https://www.andrewroque.com" target="_blank">
+	<a class="randomX2" href="https://sfbay.craigslist.org/d/missed-connections/search/mis" target="_blank">
 		<img class="randomY2" src="images/alien.gif" alt="alien" />
 	</a>
 
@@ -93,6 +93,8 @@
 	</a>
 
 
+
+<p> SF Missed Connections March 29 - April 5, 2021</p>
 
 
 	
