--- a/Missed-Connections/missed-connections.html
+++ b/Missed-Connections/missed-connections.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
 
 	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="icon" type="favicon" href="images/favicon.ico"/>
   	<script src="script.js"></script>
 
 </head>
