--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="css/script.js"></script>
+  
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap');
   </style>
@@ -15,6 +18,7 @@
 
 
 <body>
+	<button id="darkmode">Dark Mode</button>
 
   <!-- this is where my code is-->
   <div id="container">
