--- a/community-resource/community-resource.html
+++ b/community-resource/community-resource.html
@@ -52,7 +52,7 @@ a:hover {color:#ffcc00;}*/
 
 
 	<div id="title">
-		A Nonhierarchical Collection of <br> <p id="DAW">Diasporic Asian Work
+		A Nonhierarchical Collection of <br> <p id="DAW">Diasporic Asian Work</p>
 	</div>
 	<br>
 	<br>
