--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
       <ul>
         <li><a href="typeface/Bleeding-Bits_pg01.html">css typeface</a></li>
         <li><a href="Missed-Connections/missed-connections.html">graphic collection</a></li>
+        <li><a href="Interview/interview.html">interview</a></li>
+        <li><a href="community-resource/community-resource.html">community resource</a></li>
       </ul>
 
     </div>
