--- a/community-resource/community-resource.html
+++ b/community-resource/community-resource.html
@@ -40,7 +40,7 @@ a:hover {color:#ffcc00;}*/
 		<a class="button" href="https://www.mercadovicente.com/home" target=_blank>Mercado Vincente</a>
 		<a class="button" href="https://badstudentpress.com/" target=_blank>Bad Student</a>
 		<a class="button" href="http://reginebdavid.com/fever-dream" target=_blank>Fever Dream</a>
-		<a class="button" href=target=_blank>Talking with Ryan Thomas Ormsby</a>
+		<a class="button" href="https://andrewroque.github.io/interactive-foundations/Interview/interview.html" target=_blank>Talking with Ryan Thomas Ormsby</a>
 		<a class="button" href="https://www.burdockmedia.com/podcasts" target=_blank>Dream Up</a>
 		<a class="button" href="https://faultradio.com/chinatown-live/aapi-protest-poster-3-pack" target=_blank>Chinatown Live</a>
 		<a class="button" href="https://aperture.org/editorial/michael-jang-california/" target=_blank>Michael Jang</a>
