updated community resrouce

--- a/community-resource/community-resource.html
+++ b/community-resource/community-resource.html
@@ -8,13 +8,15 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 <!-- 	<link rel="icon" type="favicon" href="images/favicon.ico"/> -->
 	<link rel="icon" type="favicon" href="images/favicon.png"/>
+	<script src="js/javascript.js"></script>
+	<script async src="//jsfiddle.net/BwJHj/1/embed/"></script>
 
 <style>
 body {
   background-image: url('images/IMG_0368_1.gif');
   background-color: GhostWhite;
   background-repeat: no-repeat;
-  background-size: 100vw 1275px;
+  background-size: 100vw 1085px;
   background
 }
 </style>
@@ -27,9 +29,15 @@ a:hover {color:#ffcc00;}*/
 </head>
 
 <body>
-	<img src="images/yellowglobe.png" id="globe" alt="globe">
+	<div id="icons">
+		<img src="images/yellowglobe.png" id="globe" alt="globe">
+		<div id="contribute" class="right">
+			<a id="email" href = "mailto: andrew@andrewroque.com">Contribute</a>
+		</div>
+	</div>
 
-	<div id="grid">
+
+	<div id="grid" class="shuffle">
 		<a class="button" href="https://sarisarigeneralstore.com/" target=_blank>Sari Sari</a>
 		<a class="button" href="https://social-studies-worldwide.com/conversations" target=_blank>Social Studies</a>
 		<a class="button" href="https://vimeo.com/491210941" target=_blank>Sacred Ties</a>
@@ -47,26 +55,15 @@ a:hover {color:#ffcc00;}*/
 		<a class="button" href="https://www.instagram.com/type63_/" target=_blank>Type63</a>
 		<a class="button" href="https://cargocollective.com/jeannefjalandoni" target=_blank>Jeanna Jalandoni</a>
 		
-
 	</div>
 
 
 	<div id="title">
-		A Nonhierarchical Collection of <br> <p id="DAW">Diasporic Asian Work</p>
-	</div>
-	<br>
-	<br>
-
-	<div id="contribute" class="right">
-		<a id="email" href = "mailto: info@andrewroque.com">Contribute</a>
+		A Nonhierarchical Collection of <span id="DAW">Diasporic Asian Work</span>
 	</div>
 	<br>
 	<br>
 	<br>
-
-
-
-
 
 
 </body>
