--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap');
   </style>
+  <style>.pointer {cursor: cell;}></style>
+
 
 </head>
 
@@ -58,6 +60,7 @@
         <li><a href="garden.html">my garden</a></li>
         <li><a href="digital-bits/digital-bits.html">digital bit</a></li>
         <li><a href="typeface-test/hovering-type.html">hovering type</a></li>
+        <li><a href="https://www.figma.com/file/xxI1dccsxlEgzza8fL8q1h/Collective-Alphabet-Exercise">collective alphabet</a></li>
       </ul>
     
     </div>
