new community resource

--- a/community-resource/community-resource.html
+++ b/community-resource/community-resource.html
@@ -6,10 +6,14 @@
 	<meta charset="utf-8" />
 
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
-<!-- 	<link rel="icon" type="favicon" href="images/favicon.ico"/> -->
 	<link rel="icon" type="favicon" href="images/favicon.png"/>
+	<!-- <script src="js/javascript.js"></script> -->
+	<!-- <script async src="//jsfiddle.net/BwJHj/1/embed/"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 	<script src="js/javascript.js"></script>
-	<script async src="//jsfiddle.net/BwJHj/1/embed/"></script>
+	
+
 
 <style>
 body {
