added new stuff

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <li><a href="digital-bits/digital-bits.html">digital bit</a></li>
         <li><a href="typeface-test/hovering-type.html">hovering type</a></li>
         <li><a href="https://www.figma.com/file/xxI1dccsxlEgzza8fL8q1h/Collective-Alphabet-Exercise">collective alphabet</a></li>
+        <li><a href="Inspector/inspector.html">inpector</a></li>
       </ul>
     
     </div>
